# manpages-zh

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.GB  configure.ac  configure.in  man-pages-zh_CN.spec
DOCS/: 00TRANSLATED  ChangeLog  ChangeLog.GB  FAQ  FAQ.GB  Makefile.am  THANKS  THANKS.GB  VOCABULARY  VOCABULARY.GB
debian/: changelog  control  rules
raw/: NOT_FOUND  man.macros
raw/man1/: a2p.1  access.1  apm.1  apropos.1  ar.1  at.1  basename.1  builtins.1  cat.1  chattr.1  chfn.1  chgrp.1  chmod.1  chown.1  chroot.1  chsh.1  chvt.1  cksum.1  clear.1  clusterdb.1  comm.1  cp.1  cpio.1  createdb.1  createlang.1  createuser.1  cut.1  date.1  dd.1  deallocvt.1  df.1  dircolors.1  dirname.1  dropdb.1  droplang.1  dropuser.1  du.1  dumpkeys.1  echo.1  eject.1  (+132 more)
raw/man2/: accept.2  bind.2  close.2  create_module.2  execve.2  init_module.2  listen.2  open.2  query_module.2  read.2  send.2  write.2
raw/man3/: Object.3  basename.3  bindtextdomain.3  bzero.3  exec.3  exit.3  fclose.3  fcloseall.3  ferror.3  fflush.3  flockfile.3  iconv_close.3  iconv_open.3  setlocale.3  stdio.3  strcoll.3  strxfrm.3  ulimit.3  unlocked_stdio.3
raw/man4/: console_codes.4  fifo.4  hd.4
raw/man5/: acct.5  aliases.5  environ.5  fs.5  group.5  host.conf.5  info.5  inittab.5  ipc.5  issue.5  keymaps.5  locale.5  man.config.5  nscd.conf.5  passwd.5  proc.5  protocols.5  resolver.5  services.5  termcap.5  texinfo.5  ttytype.5  utmp.5
raw/man6/: zic2xpm.6
raw/man7/: LDP.7  abort.7  alter_aggregate.7  alter_conversion.7  alter_database.7  alter_domain.7  alter_function.7  alter_group.7  alter_language.7  alter_operator_class.7  alter_schema.7  alter_sequence.7  alter_table.7  alter_trigger.7  alter_user.7  analyze.7  arp.7  ascii.7  begin.7  bootparam.7  charsets.7  checkpoint.7  close.7  cluster.7  comment.7  commit.7  copy.7  create_aggregate.7  create_cast.7  create_constraint_trigger.7  create_conversion.7  create_database.7  create_domain.7  create_function.7  create_group.7  create_index.7  create_language.7  create_operator.7  create_operator_class.7  create_rule.7  (+77 more)
raw/man8/: MAKEDEV.8  badblocks.8  chat.8  chpasswd.8  convertquota.8  cron.8  edquota.8  exportfs.8  fdisk.8  fsck.8  groupadd.8  groupdel.8  groupmod.8  halt.8  hdparm.8  ifconfig.8  init.8  iptables.8  lspci.8  mailstats.8  makemap.8  mingetty.8  modinfo.8  netstat.8  ntsysv.8  ping.8  pppd.8  quotacheck.8  quotaon.8  repquota.8  setquota.8  setserial.8  showmount.8  shutdown.8  sync.8  tcpdump.8  useradd.8  userdel.8  usermod.8  vmstat.8  (+1 more)
raw/manl/: cbdsqr.l  lapack.l  zdrot.l  zdrscl.l
raw/mann/: Http.n  Tcl.n  after.n  append.n  array.n  bell.n  bgerror.n  binary.n  bindtags.n  break.n  catch.n  cd.n  chooseColor.n  chooseDirectory.n  ckalloc.n  ckfree.n  clipboard.n  clock.n  close.n  concat.n  continue.n  cursors.n  dde.n  destroy.n  encoding.n  eof.n  error.n  eval.n  exec.n  exit.n  expr.n  fblocked.n  fconfigure.n  fcopy.n  file.n  fileevent.n  filename.n  flush.n  focusNext.n  for.n  (+80 more)
src/: Makefile.am  man.macros  zh.tmac
src/cman/: cman.conf  cman.csh  cman.sh
src/man1/: a2p.1  ab.1  ac.1  access.1  ali.1  apm.1  apropos.1  ar.1  arch.1  at.1  autorun.1  base32.1  base64.1  basename.1  bash.1  biff.1  builtin.1  builtins.1  bzcat.1  bzip2.1  cal.1  cat.1  cce.1  charset.1  chattr.1  chfn.1  chgrp.1  chmod.1  chown.1  chroot.1  chsh.1  chvt.1  cksum.1  clear.1  clusterdb.1  col.1  comm.1  cp.1  cpio.1  createdb.1  (+221 more)
src/man2/: accept.2  bind.2  close.2  create_module.2  execve.2  init_module.2  listen.2  manpages  open.2  query_module.2  read.2  send.2  socket.2  write.2
src/man3/: Makefile.am  Object.3  basename.3  bindtextdomain.3  bzero.3  cbdsrq.3  exec.3  exit.3  fclose.3  fcloseall.3  fdopen.3  feof.3  ferror.3  fflush.3  flockfile.3  fopen.3  iconv_close.3  iconv_open.3  manpages  setbuf.3  setbuffer.3  setlocale.3  stdin.3  stdio.3  stdout.3  strcoll.3  strxfrm.3  ulimit.3  unlocked_stdio.3  zdrot.3  zdrscl.3
src/man3/zh_TW/: Makefile.am
src/man4/: console_codes.4  fifo.4  hd.4  manpages
src/man4/zh_TW/: Makefile.am
src/man5/: Makefile.am  acct.5  aliases.5  environ.5  fs.5  ftpaccess.5  group.5  host.conf.5  info.5  inittab.5  ipc.5  issue.5  keymaps.5  lilo.conf.5  lmhosts.5  locale.5  man.conf.5  man.config.5  manpages  motd.5  nologin.5  nscd.conf.5  nsswitch.5  passwd.5  proc.5  protocols.5  resolver.5  rpc.5  securetty.5  services.5  shells.5  smb.conf.5  smbpasswd.5  svnserve.conf.5  termcap.5  texinfo.5  ttytype.5  tzfile.5  utmp.5
src/man6/: manpages  zic2xpm.6
src/man6/zh_TW/: Makefile.am
src/man7/: LDP.7  abort.7  alter_aggregate.7  alter_conversion.7  alter_database.7  alter_domain.7  alter_function.7  alter_group.7  alter_language.7  alter_operator_class.7  alter_schema.7  alter_sequence.7  alter_table.7  alter_trigger.7  alter_user.7  analyze.7  arp.7  ascii.7  begin.7  bootparam.7  charsets.7  checkpoint.7  close.7  cluster.7  comment.7  commit.7  copy.7  create_aggregate.7  create_cast.7  create_constraint_trigger.7  create_conversion.7  create_database.7  create_domain.7  create_function.7  create_group.7  create_index.7  create_language.7  create_operator.7  create_operator_class.7  create_rule.7  (+103 more)
src/man8/: MAKEDEV.8  badblocks.8  bdflush.8  blockdev.8  chat.8  chpasswd.8  convertquota.8  cron.8  dmesg.8  edquota.8  exportfs.8  fdisk.8  fsck.8  groupadd.8  groupdel.8  groupmod.8  halt.8  hdparm.8  ifconfig.8  imapd.8  inetd.8  init.8  iptables-restore.8  iptables-save.8  iptables.8  lilo.8  losetup.8  lspci.8  mailstats.8  makemap.8  manpages  mingetty.8  mkfs.8  mkswap.8  modinfo.8  named-bootconf.8  netstat.8  nmbd.8  ntsysv.8  ping.8  (+37 more)
src/man8/zh_TW/: Makefile.am
src/man9/: cmanexample.9  cmanformat.9
src/manl/: cbdsqr.l  lapack.l  zdrot.l  zdrscl.l
src/mann/: ArrowButton.3tk  ArrowButton.n  Button.3tk  (+266 more)
src/mann/zh_CN/: Makefile.am
src/mann/zh_TW/: Makefile.am
utils/: Makefile.am  bi2fbfi.pl  html2man  man2html  man2html.sh  name.pl  pre-trans.pl  release-manpages  totw.pl  update-cman.sh  zhtw_2_zhcn.pl
(+12 files in other folders)
