#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(manpages-zh, 1.5.1-rc2, http://code.google.com/p/manpages-zh/issues/list)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 src/man1/Makefile
		 src/man1/zh_CN/Makefile
		 src/man1/zh_TW/Makefile
		 utils/Makefile
		 ])
AC_OUTPUT
