#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(manpages-zh, 1.5.1-rc2, http://code.google.com/p/manpages-zh/issues/list)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AC_PATH_PROG([ICONV], [iconv])
if test x$ICONV = x; then
	AC_MSG_ERROR([can not find iconv])
fi

AC_PATH_PROG([AUTOB5], [autob5])
if test x$AUTOB5 = x; then
	AC_MSG_ERROR([can not find autob5, you can install zh-autoconvert])
fi

AC_PATH_PROG([PERL], [perl])
if test x$PERL = x; then
	AC_MSG_ERROR([please install perl first])
fi

AC_CONFIG_FILES([Makefile
		 DOCS/Makefile
		 src/Makefile
		 src/man1/Makefile
		 src/man1/zh_CN/Makefile
		 src/man1/zh_TW/Makefile
		 src/man2/Makefile
		 src/man2/zh_CN/Makefile
		 src/man2/zh_TW/Makefile
		 src/man3/Makefile
		 src/man3/zh_CN/Makefile
		 src/man3/zh_TW/Makefile
		 src/man4/Makefile
		 src/man4/zh_CN/Makefile
		 src/man4/zh_TW/Makefile
		 src/man5/Makefile
		 src/man5/zh_CN/Makefile
		 src/man5/zh_TW/Makefile
		 src/man6/Makefile
		 src/man6/zh_CN/Makefile
		 src/man6/zh_TW/Makefile
		 src/man7/Makefile
		 src/man7/zh_CN/Makefile
		 src/man7/zh_TW/Makefile
		 src/man8/Makefile
		 src/man8/zh_CN/Makefile
		 src/man8/zh_TW/Makefile
		 src/mann/Makefile
		 src/mann/zh_CN/Makefile
		 src/mann/zh_TW/Makefile
		 utils/Makefile
		 ])
AC_OUTPUT
